
* [Mantis bug #376]. `base_digit_to_int/3` and `det_base_digit_to_int/2` now
  check for overflow and underflow in all bases, not only base 10.

### Changes to the `store` module

* Procedures in this module no longer acquire the global lock.

### Changes to the `term` module

* The following predicates and functions have been added:

    - `is_dummy_context/1`
    - `term_to_int/2`
    - `term_to_uint/2`
    - `term_to_int{8,16,32,64}/2`
    - `term_to_uint{8,16,32,64}/2`
    - `decimal_term_to_int/2`
    - `int_to_decimal_term/2`
    - `int{8,16,32,64}_to_decimal_term/2`
    - `uint_to_decimal_term/2`
    - `uint{8,16,32,64}_to_decimal_term/2`
    - `rename_var_in_term/4`
    - `rename_vars_in_terms/4`
    - `apply_renaming_in_term/3`
    - `apply_renaming_in_terms/3`
    - `apply_renaming_in_var/3`
    - `apply_renaming_in_vars/3`
    - `apply_renaming_in_term/3`
    - `apply_renaming_in_terms/3`
    - `substitute_var_in_term/4`
    - `substitute_var_in_terms/4`
    - `substitute_corresponding_in_term/4`
    - `substitute_corresponding_in_terms/4`
    - `apply_substitution_in_term/3`
    - `apply_substitution_in_terms/3`
    - `apply_rec_substitution_in_term/3`
    - `apply_rec_substitution_in_terms/3`

* The following predicates and functions have been moved to the
  `term_conversion` module:

   - `try_term_to_type/[12]`
   - `term_to_type/2`
   - `det_term_to_type/[12]`
   - `type_to_term/[12]`
   - `univ_to_term/[12]`

* The following predicates and functions have been deprecated and will be
  removed in a future release:

   - `var_id/1`
   - `relabel_variable/[34]`
   - `relabel_variables/[34]`
   - `rename/[34]`
   - `rename_list/[34]`
   - `apply_renaming/[23]`
   - `apply_renaming_to_list/[23]`
   - `apply_variable_renaming_to_var/[23]`
   - `apply_variable_renaming_to_vars/[23]`
   - `apply_variable_renaming/[23]`
   - `apply_variable_renaming_to_list/[23]`
   - `substitute/[34]`
   - `substitute_list/[34]`
   - `substitute_corresponding/[34]`